--- a/css/style.css
+++ b/css/style.css
@@ -2084,7 +2084,7 @@ body{
 .cursor-dot{
   width: 10px;
   height: 10px;
-  background-color: rgb(234, 22, 22);
+  background-color: #5B78F6;
   text-align: center
 
 }
